--- a/resources/[Scripts]/shops/web-side/index.html
+++ b/resources/[Scripts]/shops/web-side/index.html
@@ -5,7 +5,7 @@
 		<script src="nui://game/ui/jquery.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<link href="css.css" rel="stylesheet" type="text/css"/>
+		<link href="nui://inventory/web-side/css.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<div class="inventory">
