feat(Vehmenu): Updated Vehicle Menu

--- a/resources/[Scripts]/vehmenu/web-side/index.html
+++ b/resources/[Scripts]/vehmenu/web-side/index.html
@@ -1,25 +1,77 @@
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
-		<title>#bahamas</title>
-		<script src="nui://game/ui/jquery.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+		<title>#creative</title>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css">
 		<link rel="stylesheet" href="style.css" />
 		<script src="jquery.js"></script>
 	</head>
-	<body>
-		<div id="vehicleBackground">
-			<div id="vehicleLayout">
-				<div class="vehicleButton populated" title="" data-texto="Porta Dianteira Esquerda" data-name="door1"><img src="images/5.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Dianteira Direita" data-name="door2"><img src="images/6.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Traseira Esquerda" data-name="door3"><img src="images/1.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Traseira Direita" data-name="door4"><img src="images/2.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Capô" data-name="hood"><img src="images/7.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta-Malas" data-name="trunk"><img src="images/3.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Compartimento" data-name="chest"><img src="images/4.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Entrar no Porta-Malas" data-name="trunkin"><img src="images/3.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Estatísticas" data-name="vtuning"><img src="images/8.png"></div>
+	<body style="display: none;">
+		<div id="vehicleMenu">
+			<div class="vehicleButton" data-name="door1">
+				<img src="images/5.png">
+				<p>
+					<small>opção</small>
+					Porta Dianteira Esquerda
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="hood">
+				<img src="images/7.png">
+				<p>
+					<small>opção</small>
+					Capô
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="door2">
+				<img src="images/6.png">
+				<p>
+					<small>opção</small>
+					Porta Dianteira Direita
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="trunk">
+				<img src="images/3.png">
+				<p>
+					<small>opção</small>
+					Porta-Malas
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="door3">
+				<img src="images/2.png">
+				<p>
+					<small>opção</small>
+					Porta Traseira Esquerda
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="chest">
+				<img src="images/4.png">
+				<p>
+					<small>opção</small>
+					Compartimento
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="door4">
+				<img src="images/1.png">
+				<p>
+					<small>opção</small>
+					Porta Traseira Direita
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="trunkin">
+				<img src="images/3.png">
+				<p>
+					<small>opção</small>
+					Entrar no Porta-Malas
+				</p>
+			</div>
+			<div class="vehicleButton" data-name="vtuning">
+				<img src="images/8.png">
+				<p>
+					<small>opção</small>
+					Informações
+				</p>
 			</div>
 		</div>
 	</body>
