doc(fxmanifest): Changes fxmanifest settings, to shared-scripts

--- a/resources/[Essentials]/[Utilities]/chat/html/index.html
+++ b/resources/[Essentials]/[Utilities]/chat/html/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link href="vendor/flexboxgrid.6.3.1.min.css" rel="stylesheet"></link>
 		<link href="vendor/animate.3.5.2.min.css" rel="stylesheet"></link>
