--- a/resources/[Scripts]/barbershop/web-side/index.html
+++ b/resources/[Scripts]/barbershop/web-side/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
