--- a/resources/[Scripts]/tattoos/web-side/index.html
+++ b/resources/[Scripts]/tattoos/web-side/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
