--- a/resources/[Scripts]/vehmenu/web-side/index.html
+++ b/resources/[Scripts]/vehmenu/web-side/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
-		<title>#creative</title>
+		<title>#Alternative</title>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css">
