--- a/resources/[Essentials]/vrp/web-side/gui/index.html
+++ b/resources/[Essentials]/vrp/web-side/gui/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<script src="dynamic_classes.js"></script>
 		<script src="WPrompt.js"></script>
