--- a/resources/[Jobs]/works/web-side/index.html
+++ b/resources/[Jobs]/works/web-side/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
