--- a/resources/[Scripts]/garages/web-side/index.html
+++ b/resources/[Scripts]/garages/web-side/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<link href="css.css" rel="stylesheet" type="text/css"/>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
