--- a/resources/[Scripts]/skinshop/web-side/index.html
+++ b/resources/[Scripts]/skinshop/web-side/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
