--- a/resources/[Scripts]/sounds/web-side/index.html
+++ b/resources/[Scripts]/sounds/web-side/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>#bahamas</title>
+		<title>#Alternative</title>
 		<script src="nui://game/ui/jquery.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.1/howler.min.js" type="text/javascript"></script>
 		<script>
